# cpp_archives

./: CMakeLists.txt  a.out  ex01.cpp  some_stuff  test.c  useful
CDL info/01_hello_SDL-2/: 01_hello_SDL.cpp  02_getting_an_image_on_the_screen.cpp  04_key_presses.cpp  05_optimized_surface_loading_and_soft_stretching.cpp  16_true_type_fonts.cpp  a.out
CLion/: CMakeLists.txt
Constructors and Destructors/: Constructors & Destructore
Inheritance, polymorphism, .../: info
Objects and classes/: info
Objects and classes/Access modifiers/: info
Objects and classes/Const/: info
Objects and classes/Copy and init constructor/: info
Overloading/: info
Pool notes/d02/: d02.txt
Pool notes/d03/: notes.txt
Rush00/: a.out  ideas  start.cpp
methods/: info
ncurses/: a.out  hello_ncurses.c  info
